--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <base href="%VITE_BASE_PATH%" />
     <link rel="icon" type="image/svg+xml" href="vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>video-editor</title>
+    <title>Z Video Tools - Zoch Tecnologia</title>
   </head>
   <body>
     <div id="root"></div>
