--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <base href="%VITE_BASE_PATH%" />
-    <link rel="icon" type="image/svg+xml" href="vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="shield.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Z Video Tools - Zoch Tecnologia</title>
   </head>
